--- a/android/app/src/main/res/values/colors.xml
+++ b/android/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
  
- <color name="blue">#4BBEE3</color>
- <color name="transparent">#00000000</color>
+ <color name="blue">#4C566A</color>
+ <color name="transparent">#2E3440</color>
 </resources>
