--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -1,9 +1,11 @@
 <resources>
 
-    <!-- Base application theme. -->
+
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
     <item name="android:windowBackground">@drawable/splash_screen</item>
-        <!-- Customize your theme here. -->
+    <item name="colorAccent">#4C566A</item>
+    <item name="colorControlActivated">#A3BE8C</item>
+    <item name="colorControlHighlight">#BF616A</item>
     </style>
 
     
